<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_kf_navigator</name>
  <version>0.0.0</version>
  <description>A basic Navigator for performing pre planned trajectories</description>
  <maintainer email="stevedan.o.omodolor@gmail.com">Stevedan Ogochukwu Omodolor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_util</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_ros_com</depend>
  <depend>Eigen3</depend>
  <depend>tf2_ros</depend>
  <depend>angles</depend>
  <depend>localization_kf_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

